@@ -191,6 +191,30 @@ class ListFieldTestCase(unittest.TestCase):
         post = Post.load(self.db, 'test')
         assert isinstance(post.comments[0], dict)
 
+    def test_proxy_pop(self):
+        class Thing(schema.Document):
+            numbers = schema.ListField(schema.DecimalField)
+        thing = Thing()
+        thing.numbers = [Decimal('%d' % i) for i in range(3)]
+        self.assertEqual(thing.numbers.pop(), Decimal('2.0'))
+        self.assertEqual(len(thing.numbers), 2)
+        self.assertEqual(thing.numbers.pop(0), Decimal('0.0'))
+
+    def test_proxy_slices(self):
+        class Thing(schema.Document):
+            numbers = schema.ListField(schema.DecimalField)
+        thing = Thing()
+        thing.numbers = [Decimal('%d' % i) for i in range(5)]
+        ll = thing.numbers[1:3]
+        self.assertEqual(len(ll), 2)
+        self.assertEqual(ll[0], Decimal('1.0'))
+        thing.numbers[2:4] = [Decimal('%d' % i) for i in range(6, 8)]
+        self.assertEqual(thing.numbers[2], Decimal('6.0'))
+        self.assertEqual(thing.numbers[4], Decimal('4.0'))
+        self.assertEqual(len(thing.numbers), 5)
+        del thing.numbers[3:]
+        self.assertEquals(len(thing.numbers), 3)
+
 
 def suite():
     suite = unittest.TestSuite()
